--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,7 +2,6 @@ doctype html
 html(lang='en')
 
     head
-
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='')
@@ -23,7 +22,6 @@ html(lang='en')
         link(href='css/styles.css', rel='stylesheet')
 
     body#page-top
-
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
             .container.px-4.px-lg-5
@@ -118,62 +116,19 @@ html(lang='en')
                         i.far.fa-paper-plane.fa-2x.mb-2.text-white
                         h2.text-white.mb-5 Subscribe for fund launch updates!
 
-                    
-
-
-                        // * * * * * * * * * * * * * * *
-                        // * * SB Forms Contact Form * *
-                        // * * * * * * * * * * * * * * *
-
-                        // This form is pre-integrated with SB Forms.
-                        // To make this form functional, sign up at
-                        // https://startbootstrap.com/solution/contact-forms
-                        // to get an API token!
-                        
-                        form#contactForm.form-signup(data-sb-form-api-token='API_TOKEN')
-
-                            // Email address input
-
-                            .row.input-group-newsletter
-                                .col
-                                    input#emailAddress.form-control(
-                                        type='email',
-                                        placeholder='Enter email address...',
-                                        aria-label='Enter email address...',
-                                        data-sb-validations='required,email'
-                                    )
-                                .col-auto
-                                    button#submitButton.btn.btn-primary.disabled(type='submit') Notify Me!
-                            .invalid-feedback.mt-2(data-sb-feedback='emailAddress:required')
-                                | An email is required.
-                            .invalid-feedback.mt-2(data-sb-feedback='emailAddress:email')
-                                | Email is not valid.
-
-                            // Submit success message
-                            //
-                            // This is what your users will see when the form
-                            // has successfully submitted
-
-                            #submitSuccessMessage.d-none
-                                .text-center.mb-3.mt-2.text-white
-                                    .fw-bolder Form submission successful!
-                                    | To activate this form, sign up at
-                                    br
-                                    a(href='https://startbootstrap.com/solution/contact-forms') https://startbootstrap.com/solution/contact-forms
-
-                            // Submit error message
-                            //
-                            // This is what your users will see when there is
-                            // an error submitting the form
-
-                            #submitErrorMessage.d-none
-                                .text-center.text-danger.mb-3.mt-2 Error sending message!
+                        script(charset="utf-8" type="text/javascript" src="//js-na2.hsforms.net/forms/embed/v2.js")
+                        script.
+                            hbspt.forms.create({
+                                portalId: "242076193",
+                                formId: "b13f7861-cc59-461c-9b38-a3ecc3f4547e",
+                                region: "na2"
+                            });
 
         // Contact
         section.contact-section.bg-black
-                .social.d-flex.justify-content-center
-                    a.mx-2(href='https://www.instagram.com/psxcapital')
-                        i.fab.fa-instagram 
+            .social.d-flex.justify-content-center
+                a.mx-2(href='https://www.instagram.com/psxcapital')
+                    i.fab.fa-instagram 
 
         // Footer
         footer.footer.bg-black.small.text-center.text-white-50
