--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -105,7 +105,7 @@ html(lang='en')
                     .col-lg-8
                         h2.text-black.mb-4 Investment Opportunity
                         p.text-black-50
-                            | This year, we're launching a $5M fund that offers exclusive investment opportunities with projected annual returns of over 15%. Sign up below for launch updates.
+                            | This year, we're launching a $5M fund that offers exclusive investment opportunities with projected annual returns of 15%. Sign up below for launch updates.
                 img.img-fluid(src='assets/img/ipad1.png', alt='...')
 
         // Signup
